Update the name in the menu

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -41,7 +41,7 @@
     }
   ],
   "menu" : {
-    "title" : "📝 Awesome ipsum",
+    "title" : "📝 Awesome ipsums",
     "items" : [
       "sync.ipsum",
       "-",
