--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "sketch": ">=49.0"
   },
+  "repository": {
+    "url": "https://github.com/inVoltag/awesome-ipsums"
+  },
   "skpm": {
     "name": "awesome-ipsums",
     "manifest": "src/manifest.json",
