Revert "prefix the plugin name with sketch"
This reverts commit e325e6931aa76a5a567ea84421e98c0aa96c78b9.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "skpm": {
     "name": "sketch-awesome-ipsums",
     "manifest": "src/manifest.json",
-    "main": "sketch-awesome-ipsums.sketchplugin",
+    "main": "awesome-ipsums.sketchplugin",
     "assets": [
       "assets/**/*"
     ],
